--- a/.github/workflows/common-publish.yml
+++ b/.github/workflows/common-publish.yml
@@ -35,7 +35,7 @@ jobs:
       - run: echo "RELEASE_VERSION=$(npm version minor --git-tag-version false)" >> $GITHUB_OUTPUT
         id: minor-version-bump
         working-directory: ${{ inputs.tool }}
-      - run: npm publish --provenance --access public
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         working-directory: ${{ inputs.tool }}
