--- a/.github/workflows/common-publish.yml
+++ b/.github/workflows/common-publish.yml
@@ -11,6 +11,7 @@ jobs:
     uses: ./.github/workflows/common-build.yml
     with:
       tool: ${{ inputs.tool }}
+    permissions: {}
   publish:
     runs-on: ubuntu-latest
     needs: [call-build]
