--- a/.github/workflows/common-release.yml
+++ b/.github/workflows/common-release.yml
@@ -23,6 +23,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+      - run: git config --global user.name "github-actions[bot]"
+      - run: git config --global user.email "github-actions[bot]@users.noreply.github.com"
       - uses: actions/setup-node@v6
         with:
           node-version: "current"
